Agregada documentacion de respuesta en metodo de updateProject
